Added functionality to export plots as image files and created a 'plots' directory to store them

--- a/notebooks/analise_comparativa_idades.ipynb
+++ b/notebooks/analise_comparativa_idades.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ym/vtsfljl13gj6ms14j1387nhc0000gn/T/ipykernel_15559/4018039245.py:1: DtypeWarning: Columns (57,60,61,74,86) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/ym/vtsfljl13gj6ms14j1387nhc0000gn/T/ipykernel_2846/4018039245.py:1: DtypeWarning: Columns (57,60,61,74,86) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_infarto = pd.read_csv('../data/bq-results-infarto-2015-2022.csv')\n"
      ]
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +128,7 @@
     "plt.title('Top 10 Ocupações mais Populares (60 anos ou mais)')\n",
     "plt.xlabel('Quantidade')\n",
     "plt.ylabel('Ocupação')\n",
+    "plt.savefig('ocupacoes_maior_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "plt.show()\n",
     "\n",
     "# Plotar gráfico de contagem de ocupações para pessoas com menos de 60 anos\n",
@@ -136,6 +137,7 @@
     "plt.title('Top 10 Ocupações mais Populares (menos de 60 anos)')\n",
     "plt.xlabel('Quantidade')\n",
     "plt.ylabel('Ocupação')\n",
+    "plt.savefig('ocupacoes_menor_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "plt.show()\n",
     "\n",
     "# Calcular a proporção de ocupações para pessoas com 60 anos ou mais\n",
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,20 +262,21 @@
     "plt.title('Distribuição do Local de Ocorrência (60 anos ou mais)')\n",
     "plt.xlabel('Contagem')\n",
     "plt.ylabel('Local de Ocorrência')\n",
+    "plt.savefig('distribuicao_local_ocorrencia_maior_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
     "sns.countplot(data=df_infarto_menor_60, y='local_ocorrencia', palette='viridis')\n",
     "plt.title('Distribuição do Local de Ocorrência (menos de 60 anos)')\n",
     "plt.xlabel('Contagem')\n",
     "plt.ylabel('Local de Ocorrência')\n",
-    "\n",
+    "plt.savefig('distribuicao_local_ocorrencia_menor_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -387,13 +390,13 @@
     "plt.title('Assistência Médica (60 anos ou mais)')\n",
     "plt.xlabel('Contagem')\n",
     "plt.ylabel('Assistência Médica')\n",
-    "\n",
+    "plt.savefig('assistencia_medica_maior_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "plt.subplot(1, 2, 2)\n",
     "sns.countplot(data=df_infarto_menor_60, y='assistencia_medica', palette='viridis')\n",
     "plt.title('Assistência Médica (menos de 60 anos)')\n",
     "plt.xlabel('Contagem')\n",
     "plt.ylabel('Assistência Médica')\n",
-    "\n",
+    "plt.savefig('assistencia_medica_menor_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
@@ -404,15 +407,16 @@
     "plt.title('Cirurgia (60 anos ou mais)')\n",
     "plt.xlabel('Contagem')\n",
     "plt.ylabel('Cirurgia')\n",
-    "\n",
+    "plt.savefig('cirurgia_maior_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "plt.subplot(1, 2, 2)\n",
     "sns.countplot(data=df_infarto_menor_60, y='cirurgia', palette='viridis')\n",
     "plt.title('Cirurgia (menos de 60 anos)')\n",
     "plt.xlabel('Contagem')\n",
     "plt.ylabel('Cirurgia')\n",
-    "\n",
+    "plt.savefig('cirurgia_menor_60.png', bbox_inches='tight')  # Salvar como PNG\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
+    "\n",
     "\n",
     "# Calculando contagens e proporções para assistência médica nos dois grupos etários\n",
     "contagem_assistencia_medica_maior_60 = df_infarto_maior_60['assistencia_medica'].value_counts()\n",
